--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "npm run build && npm run jasmine",
     "jasmine": "jasmine",
     "start": "nodemon src/index.ts",
-    "lint": "eslint ./dist",
-    "prettier": "prettier --config .prettierrc 'dist/*.js' --write"
+    "lint": "eslint src/**/*.ts",
+    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "keywords": [
     "API",
@@ -20,11 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "jasmine": "^4.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "nodemon": "^2.0.20",
-    "sharp": "^0.31.2",
-    "supertest": "^6.3.1"
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -35,7 +31,11 @@
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
+    "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.0",
+    "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
